--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,16 +1,8 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.description %></p>
 
-<%
-=begin%>
- <div><%= link_to "Edit", edit_article_path(@article) %></div> 
-<%
-=end%>
-<%
-=begin%>
- <div><%= link_to "Destroy", article_path(@article),
+<div><%= link_to "Edit", edit_article_path(@article) %></div>
+<div><%= link_to "Destroy", article_path(@article),
                 method: :delete,
-                data: { confirm: "Are you sure?" } %></div> 
-<%
-=end%>
-
+                data: { confirm: "Are you sure?" } %></div>
+<div><%= link_to "Back to listings", articles_path %></div>
