--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Author</th>
       <th>Description</th>
       <th>Actions</th>
     </tr>
@@ -11,6 +12,7 @@
     <% @articles.each do |article| %>
       <tr>
         <td><%= link_to article.title, article %></td>
+        <td><%= article.user.username if article.user %>
         <td><%= article.description %></td>
         <td><%= link_to 'Show', article_path(article) %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
