--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @article.title %></h1>
+<h5>by <%= @article.user.username if @article.user %></h5>
 <p><%= @article.description %></p>
 
 <div><%= link_to "Edit", edit_article_path(@article) %></div>
