--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit(user.new_record? ? "Sign up" : "Update account") %>
   </div>
 <% end %>
 
