--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @user.username %></h1>
 <h1><%= @user.email%></h1>
 <div><%= link_to "Back to listings", articles_path %></div>
+
+
+<div><%= link_to "Edit", edit_user_path(@user) %></div>
