--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,16 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= link_to article.title, article %></td>
-        <td><%= article.user.username if article.user %>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article_path(article) %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
-    <% end %>
+    <%= render "articles", articles: @articles %>
   </tbody>
 </table>
 <%= link_to "New Article", new_article_path %>
