--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,22 @@
-<h1><%= @user.username %></h1>
-<h1><%= @user.email%></h1>
-<div><%= link_to "Back to listings", articles_path %></div>
+<div style="width: 100%; display: flex"><span><%= link_to "Back to listings", articles_path %></span></div>
 
+<div style="width: 100%; display: flex; flex-direction: row; align-items: center;"><h1><%= @user.username %>'s Profile</h1><span style="margin-left: 20px;"><%= link_to "Edit", edit_user_path(@user) %></span> </div>
 
-<div><%= link_to "Edit", edit_user_path(@user) %></div>
+<%= gravatar_for @user %>
+
+<p>Email: <%= @user.email%></h1>
+
+<h3>User's Articles</h3>
+<table>
+    <thead>
+        <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Description</th>
+        <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <%= render 'articles/articles', articles: @user.articles %>
+    </tbody>
+</table>
